--- a/exercici/src/App.css
+++ b/exercici/src/App.css
@@ -1,10 +1,20 @@
 *{
-
-  margin: 20px;
+  box-sizing: border-box;
+ 
 }
-/*
-.boxes {
-  display:flex;
-  flex-direction: column;
 
-}*/
+body{
+  margin: 10px;
+}
+
+.navbar {
+  margin-bottom: 5%;
+}
+
+.h3{
+  margin-bottom: 30px;
+}
+
+.active {
+  color: lightgray;
+}
